--- a/exercicios/desafio012/estilo.css
+++ b/exercicios/desafio012/estilo.css
@@ -1,15 +1,23 @@
 @charset "UTF-8";
-@font-face {
-    font-family:cordel ;
-    src: url() format(opentype);
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+:root{
+    --fonte1:Verdana, "Geneva", Tahoma, sans-serif;
+    --fonte2:"Passion One", sans-serif;
+    --fonte3:"Sriracha", "cursive";
+
 }
 *{
     margin:0;
     padding: 0;
+   
 }
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
+    
 }
 header{
     background-color: black;
@@ -19,6 +27,8 @@ header{
 header > h1{
     padding-top:50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 header > p{
 padding-bottom: 50px;
@@ -36,6 +46,11 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size:3vw;
+}
+section > p{
+    padding: 1em;
 }
 section.normal{
     background-color: white;
@@ -44,11 +59,27 @@ section.normal{
 section.imagem{
     background-color: black;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.089);
+    background-size: cover;
+    background-attachment: fixed;
     
 }
 section.imagem > p{
-    background-color: rgba(84, 81, 81, 0.285);
-    width: 400px;
+    background-color: rgba(12, 10, 10, 0.732);
+  display: inline-block;
+  padding: 5px;
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.733);
+  border-radius: 20px;
+  
+}
+section#img01{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+
+}
+section#img02{
+    background-image: url(imagens/background002.jpg);
+
 }
 
 footer{
